tests/requests/valid/nonascii_02.http
PUT /每/french..?茅=猫 HTTP/1.1\r\n
Unicode: awesome\r\n
Content-Length: 6\r\n
\r\n
脌脕脗
