tests/requests/invalid/nonascii_02.http
GETÿ /french.. HTTP/1.1\r\n
Content-Length: 3\r\n
\r\n
ÄÄÄ
